# nubilum

./: .dockerignore  .gitignore  BACKGROUND_DESIGN.md  COLOR_SCHEME.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  HEADER_LAYOUT.md  LICENSE  LOGO_INFO.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE_TRACKING.md  activate.sh  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.sh  test_usage_tracking.py
docker/: nginx.conf  supervisord.conf
nubilum/: __init__.py  anonymizer.py  app.py  usage_tracker.py
nubilum/static/: app.jsx  hl7_examples.js  index.html  styles.css
