[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubilum"
version = "1.0.0"
description = "HL7 Portugal - Message Anonymization Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HL7 Portugal"}
]
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "hl7apy>=1.3.4",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["nubilum"]
include-package-data = true

[tool.setuptools.package-data]
nubilum = ["static/**/*", "templates/*"]
